--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.482.0",
-    "next": "15.2.2",
+    "next": "^15.2.4",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-spinners": "^0.15.0",
     "sonner": "^2.0.2",
